objects/AE__c.object
<CustomObject>
    <fields>
        <fullName>APOid__c</fullName>
        <label>APOid</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>AE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manager__c</columns>
        <columns>Region__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>